# ListenerFacingDesign

./: .gitignore  CMakeLists.txt  README.md
include/: psychopy.h
planning/: 2025-01-13-initial-plan.md
qml/: main.qml
src/: main.cpp  psychopy.cpp  psychopy.h
